# apriltag_rpi_positioning

./: .gitignore  CMakeLists.txt  README.md  main.cpp
calibration/: CMakeLists.txt  calibrate.cpp  cam_mat.cal  camera_calibration.cpp  config.xml  take_calibration_images.c
include/: detect_apriltags.h  gstream_from_cam.h  libcamera_stream.hpp  logger.h  settings.h  transmit_pose.h  uart.h
settings/: settings.json
src/: detect_apriltags.c  gstream_from_cam.c  libcamera_stream.cpp  logger.c  main.c  main.cpp  settings.c  transmit_pose.c  uart.c
